# p2p-poc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.pyagents  Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  build.sh  compose.yml  default.env  requirements.txt
android-app/app/: build.gradle.kts
android-app/app/src/androidTest/java/poc/p2p/app/: ExampleInstrumentedTest.kt
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/poc/p2p/app/: MainActivity.kt  P2PService.kt
android-app/app/src/main/java/poc/p2p/app/ui/theme/: Color.kt  MainScreen.kt  NavHost.kt  ReputationsScreen.kt  Theme.kt  TopicsScreen.kt  Type.kt
android-app/app/src/main/java/uniffi/bindings_p2p/: bindings_p2p.kt
android-app/app/src/test/java/poc/p2p/app/: ExampleUnitTest.kt
android-app/gradle/: libs.versions.toml
android-app/gradle/wrapper/: gradle-wrapper.properties
backend/: Cargo.toml
backend/src/: main.rs  model.rs  utils.rs
backend/src/routes/: links.rs  mod.rs
backend/src/services/: db.rs  llmdb.rs  mod.rs  p2p.rs  queue.rs
bindings-p2p/: Cargo.toml  build.rs  build.sh  pyproject.toml
bindings-p2p/python/: .gitignore  agent.py
bindings-p2p/src/: bindings_p2p.udl  dummy.rs  lib.rs  types.rs
bindings-p2p/tests/: listener_test.rs
dioxus-fullstack/: Cargo.toml  Dioxus.toml
dioxus-fullstack/src/: main.rs
frontend/: Cargo.toml
frontend/assets/: main.css
frontend/src/: main.rs  models.rs
messages-p2p/: .gitignore  Cargo.toml  Dockerfile  temp_config.toml.aws  temp_config.toml.local
messages-p2p/.cargo/: config.toml
messages-p2p/src/: lib.rs  main.rs
messages-p2p/src/p2p/: api.rs  behaviours.rs  bootstrap.rs  config.rs  handlers.rs  mod.rs  node.rs
messages-p2p/tests/: functional_test.rs  integration_test.rs
messages-types/: Cargo.toml
messages-types/src/: lib.rs  messages.rs
p2p-infra/: Pulumi.p2pinfra.yaml  Pulumi.yaml  __main__.py  get_public_ip.sh
protocol-p2p/: Cargo.toml
protocol-p2p/src/: client.rs  db.rs  handler.rs  lib.rs  main.rs  messages.rs  models.rs  protocol.rs
protocol-p2p/tests/: integration.rs
py-agents/: .dockerignore  agent_worker.py  craw.py  db.py  dispatcher.py  llmdb.py  models.py  requirements.txt  test_use_case.py
py-agents/agents/: agent_worker.py  dummy_rss_p2p_worker.py
py-agents/agents/tools/: craw.py  p2p.py
py-sdk/src/: agent.py  bindings_p2p.py  cli.py  main.py  test_cli_scenario.py
