[package]
name = "bindings-p2p"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls"] }
messages-p2p = { path = "../messages-p2p" }
log = "0.4"
env_logger = "0.10"
serde = { version = "1", features = ["derive"] }
rand = "0.9.1"
thiserror = "2.0.12"
sha2 = "0.10.9"
pyo3 = { version = "0.25.1", features = ["extension-module"] }
once_cell = "1.21.3"
