[package]
name = "messages-p2p"
version = "0.1.0"
edition = "2024"


[lib]
name = "messages_p2p"
crate-type = ["rlib", "cdylib"]  # support both Rust-native and JNI .so


[dependencies]
libp2p = { version = "0.55.0", features = ["tokio", "dns", "kad", "mdns", "noise", "macros", "tcp", "yamux", "gossipsub", "request-response", "json", "relay", "identify"] }
protocol-p2p = { path = "../protocol-p2p" }
messages-types = { path = "../messages-types" }
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }

tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = "0.3.31"
tokio = { version = "1.45.0", features = ["full"] }
anyhow = "1.0.98"
once_cell = "1.21.3"
nom = "8.0.0"
rand = "0.9.1"
log = "0.4.27"
env_logger = "0.11.8"
axum = "0.8.4"
serde_json = "1.0.140"
dotenv = "0.15.0"

[test-dependencies]
protocol-p2p = { path = "../protocol-p2p" }
messages-types = { path = "../messages-types" }

